refactor: address all code smells - modularize DataInitializer, extract SecurityConstants, eliminate wildcard imports, and enhance CORS security